[tool.poetry]
name = "backup-scrapbox"
version = "0.1.0"
description = ""
authors = ["085astatine <astatine085@gmail.com>"]
license = ""

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
dacite = "^1.6.0"
jsonschema = "^4.6.0"
requests = "^2.28.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
pycodestyle = "^2.8.0"
pylint = "^2.14.3"
types-jsonschema = "^4.6.0"
types-requests = "^2.28.0"
types-toml = "^0.10.7"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
strict_optional = true
warn_redundant_casts = true

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",  # C0114
    "missing-class-docstring",  # C0115
    "missing-function-docstring",  #C0116
    "consider-using-f-string",  # C0209
    "logging-fstring-interpolation",  # W1203
]

[tool.pylint.logging]
logging-format-style = 'new'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
