[tool.poetry]
name = "backup-scrapbox"
version = "0.1.0"
description = ""
authors = ["085astatine <astatine085@gmail.com>"]
license = ""

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.11.11"
dacite = "^1.8.1"
fake-useragent = "^1.5.1"
jsonschema = "^4.23.0"
requests = "^2.32.3"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.14.1"
pycodestyle = "^2.12.1"
pylint = "^3.3.3"
types-jsonschema = "^4.23.0"
types-requests = "^2.32.0"
types-toml = "^0.10.8"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
strict_optional = true
warn_redundant_casts = true

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",  # C0114
    "missing-class-docstring",  # C0115
    "missing-function-docstring",  # C0116
    "consider-using-f-string",  # C0209
    "logging-fstring-interpolation",  # W1203
]

[[tool.mypy.overrides]]
module = ['fake_useragent']
ignore_missing_imports = true

[tool.pylint.logging]
logging-format-style = 'new'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
