[tool.poetry]
name = "backup-cosense"
version = "0.1.0"
description = ""
authors = ["085astatine <astatine085@gmail.com>"]
license = ""

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.11.12"
dacite = "^1.9.2"
fake-useragent = "^2.0.3"
jsonschema = "^4.23.0"
requests = "^2.32.3"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.15.0"
pylint = "^3.3.4"
types-jsonschema = "^4.23.0"
types-requests = "^2.32.0"
types-toml = "^0.10.8"

[tool.isort]
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
strict_optional = true
warn_redundant_casts = true

[tool.pylint.messages_control]
enable = [
  "useless-suppression", # I0021
]
disable = [
  "missing-module-docstring", # C0114
  "missing-class-docstring", # C0115
  "missing-function-docstring", # C0116
  "consider-using-f-string", # C0209
  "logging-fstring-interpolation", # W1203
]

[tool.pylint.logging]
logging-format-style = 'new'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
